fix height on mobile view

--- a/src/pages/projects-description/ProjectInfo.scss
+++ b/src/pages/projects-description/ProjectInfo.scss
@@ -125,6 +125,7 @@
     .about-section {
       padding: 40px 20px 60px 20px;
       display: block;
+      max-height: none;
 
       .lab-info {
         width: 100%;
