--- a/src/pages/publications/publications.scss
+++ b/src/pages/publications/publications.scss
@@ -121,6 +121,7 @@
     .about-section {
       padding: 40px 20px 60px 20px;
       display: block;
+      max-height: none;
 
       .lab-info {
         width: 100%;
